--- a/www/w3m/Makefile
+++ b/www/w3m/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.52 2007/02/04 20:55:23 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.53 2007/06/02 02:35:42 uebayasi Exp $
 #
 
 PKGNAME=	w3m-${W3M_VERS}
-PKGREVISION=	8
 COMMENT=	Multilingualized version of a pager/text-based browser w3m
 
 CONFLICTS+=	w3m-img-[0-9]*
