--- a/biology/puzzle/Makefile
+++ b/biology/puzzle/Makefile
@@ -1,14 +1,12 @@
-# $NetBSD: Makefile,v 1.7 2006/02/05 23:08:20 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2007/06/08 18:35:22 wiz Exp $
 
 DISTNAME=	tree-puzzle-5.1
 PKGNAME=	puzzle-5.1
 PKGREVISION=	1
 CATEGORIES=	biology
-MASTER_SITES=	http://members.tripod.de/korbi/puzzle/ \
-		ftp://ftp.ebi.ac.uk/pub/software/unix/puzzle/ \
+MASTER_SITES=	ftp://ftp.ebi.ac.uk/pub/software/unix/puzzle/ \
 		ftp://ftp.pasteur.fr/pub/GenSoft/unix/evolution/Puzzle/ \
-		ftp://iubio.bio.indiana.edu/molbio/evolve/puzzle/ \
-		http://iubio.bio.indiana.edu/soft/molbio/evolve/puzzle/
+		ftp://iubio.bio.indiana.edu/molbio/evolve/puzzle/
 
 MAINTAINER=	babafou@babafou.eu.org
 HOMEPAGE=	http://www.tree-puzzle.de/
