--- a/devel/p5-subversion/Makefile
+++ b/devel/p5-subversion/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.35 2007/06/08 12:25:02 wiz Exp $
+# $NetBSD: Makefile,v 1.36 2007/06/08 22:49:26 epg Exp $
 
 PKGNAME=	p5-subversion-${SVNVER}
-PKGREVISION=	1
 COMMENT=	Perl bindings for Subversion
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
