--- a/devel/ruby-subversion/Makefile
+++ b/devel/ruby-subversion/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2007/06/08 12:25:02 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2007/06/08 22:49:26 epg Exp $
 
 PKGNAME=	${RUBY_PKGPREFIX}-subversion-${SVNVER}
-PKGREVISION=	1
 COMMENT=	Ruby bindings for Subversion
 
 .include "../../devel/subversion/Makefile.common"
