--- a/devel/subversion-base/Makefile
+++ b/devel/subversion-base/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.46 2007/06/08 12:25:03 wiz Exp $
+# $NetBSD: Makefile,v 1.47 2007/06/08 22:49:27 epg Exp $
 
 PKGNAME=	subversion-base-${SVNVER}
-PKGREVISION=	2
 COMMENT=	Version control system, base programs and libraries
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
