--- a/www/ap2-subversion/Makefile
+++ b/www/ap2-subversion/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.28 2007/06/08 12:25:06 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2007/06/08 22:49:27 epg Exp $
 
 PKGNAME=	ap2-subversion-${SVNVER}
-PKGREVISION=	1
 COMMENT=	WebDAV server (Apache module) for Subversion
 
 .include "../../devel/subversion/Makefile.common"
